# ComfyUI-prompt-workflow-library

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
.github/workflows/: build-installers.yml
integrations/comfyui/ComfyUI-Filmclusive-Bridge/: README.md  __init__.py  routes.py  terms.default.json
src/: index.css  main.tsx  router.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/default_workflows/: Image (Edit) - Flux 2 (Positive only).json  MAS_image_flux2_klein_text_to_image-reference image 2.json  MAS_image_flux2_klein_text_to_image.json  MAS_image_flux2_klein_text_to_image_Backup.json  MAS_image_flux2_klein_text_to_image_TRYING-ADD-IMAGE.json  Mas-6-key-frames_multi-step-video.json  Mas-dual2single_image_flux_single.json  Mas_Dual_image_flux2_klein_image_edit_4b_base.json  Mas_FirstLast_wan2.1_flf2v_720_f16.json  Mas_image-edit_flux2-singel image backup-no negative.json  Mas_wan2.2_fun_cameraControl-testing.json  Text To Image + LoRA- Flux 2 Klein.json  filmclusive_sdxl_base.json  manifest.json
src-tauri/icons/: icon.icns
src-tauri/src/: default_workflows.rs  error.rs  main.rs  model.rs  paths.rs  settings.rs  state.rs  storage.rs  workflow_injection.rs
src-tauri/src/commands/: attachments.rs  comfyui.rs  comfyui_bridge.rs  comfyui_bridge_installer.rs  export.rs  history.rs  mod.rs  project.rs  prompt_text.rs  prompts.rs  scenes.rs  shots.rs  workflows.rs
src/lib/: tauri.ts  theme.ts
src/state/: AppProviders.tsx  AppState.tsx
src/ui/: AppShell.tsx
src/ui/components/: Input.tsx  (+4 more)
(+10 files in other folders)
