[package]
name = "filmclusive_library"
version = "0.1.0"
description = "Filmclusive prompt + workflow library"
authors = ["Filmclusive"]
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
  "clipboard-read-text",
  "clipboard-write-text",
  "dialog-open",
  "dialog-save",
  "os-all",
  "path-all",
  "shell-open"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1.10", features = ["v4", "v5", "serde"] }
thiserror = "1.0"
similar = "2.6"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
shell-words = "1.1"
include_dir = "0.7"

[dev-dependencies]
tempfile = "3.12"
